kustomization/overlays/prod/unifi/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: auth-forwardauth-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: unifi-network-application-ingress
spec:
  rules:
    - host: unifi.tswn.us
      http:
        paths:
          - backend:
              service:
                name: unifi-network-application-svc
                port:
                  name: una-web
            path: /
            pathType: Prefix
